--- a/boards/qemu-coreboot-whiptail-tpm1-hotp/qemu-coreboot-whiptail-tpm1-hotp.config
+++ b/boards/qemu-coreboot-whiptail-tpm1-hotp/qemu-coreboot-whiptail-tpm1-hotp.config
@@ -27,6 +27,7 @@ CONFIG_QRENCODE=y
 CONFIG_TPMTOTP=y
 CONFIG_POPT=y
 CONFIG_FLASHTOOLS=y
+CONFIG_NVMUTIL=y
 CONFIG_FLASHROM=y
 CONFIG_PCIUTILS=y
 CONFIG_UTIL_LINUX=y
