--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,15 +11,11 @@ commands:
         type: string
     steps:
       - run:
-          name: Install dependencies
-          command: |
-            ln -fs /usr/share/zoneinfo/America/New_York /etc/localtime
-            apt update
-            apt install -y build-essential zlib1g-dev uuid-dev libdigest-sha-perl libelf-dev bc bzip2 bison flex git gnupg gawk iasl m4 nasm patch python python2 python3 wget gnat cpio ccache pkg-config cmake libusb-1.0-0-dev autoconf texinfo ncurses-dev doxygen graphviz udev libudev1 libudev-dev automake libtool rsync innoextract sudo libssl-dev device-tree-compiler u-boot-tools sharutils e2fsprogs parted curl unzip imagemagick libncurses5-dev zip
-      - run:
           name: Make Board (FULL ORDERED BUILD LOGS HERE UNTIL JOB FAILED)
           command: |
-            rm -rf build/<<parameters.arch>>/<<parameters.target>>/* build/<<parameters.arch>>/log/* && make V=1 BOARD=<<parameters.target>> <<parameters.subcommand>> || touch ./tmpDir/failed_build
+            rm -rf build/<<parameters.arch>>/<<parameters.target>>/* build/<<parameters.arch>>/log/* &&
+            nix --extra-experimental-features 'nix-command flakes' develop --ignore-environment --command make V=1 BOARD=<<parameters.target>> <<parameters.subcommand>> ||
+            touch ./tmpDir/failed_build
           no_output_timeout: 3h
       - run:
           name: Output hashes
@@ -118,7 +114,7 @@ jobs:
 
   build_and_persist:
     docker:
-      - image: debian:11
+      - image: nixos/nix:2.16.1
     resource_class: large
     parameters:
       arch:
@@ -145,7 +141,7 @@ jobs:
 
   build:
     docker:
-      - image: debian:11
+      - image: nixos/nix:2.16.1
     resource_class: large
     parameters:
       arch:
@@ -165,7 +161,7 @@ jobs:
 
   save_cache:
     docker:
-      - image: debian:11
+      - image: nixos/nix:2.16.1
     resource_class: large
     steps:
       - attach_workspace:
@@ -194,7 +190,6 @@ jobs:
             - build/x86/coreboot-4.15
             - build/x86/coreboot-4.17
             - build/x86/coreboot-4.19
-            - build/x86/coreboot-git
             - build/ppc64/coreboot-git
       - save_cache:
           #Generate cache for the exact same modules definitions if hash is not previously existing
