oem-factory-reset: allow to set gpg key algorithm
* CONFIG_GPG_DEFAULT_ALGO defaults to RSA 3072 if not set
* currently only p256 is supported as alternative
* added p256 for nitropad ns50/nv41 boards

--- a/boards/nitropad-ns50/nitropad-ns50.config
+++ b/boards/nitropad-ns50/nitropad-ns50.config
@@ -41,6 +41,8 @@ export CONFIG_BOOTSCRIPT=/bin/gui-init
 export CONFIG_BOOT_KERNEL_ADD="intel_iommu=igfx_off"
 export CONFIG_BOOT_KERNEL_REMOVE="intel_iommu=on intel_iommu=igfx_off"
 
+export CONFIG_GPG_DEFAULT_ALGO=p256
+
 # TPM2 requirements
 export CONFIG_TPM2_TOOLS=y
 export CONFIG_PRIMARY_KEY_TYPE=ecc
