--- a/boards/nitropad-nv41/nitropad-nv41.config
+++ b/boards/nitropad-nv41/nitropad-nv41.config
@@ -41,6 +41,8 @@ export CONFIG_BOOTSCRIPT=/bin/gui-init
 export CONFIG_BOOT_KERNEL_ADD="intel_iommu=igfx_off"
 export CONFIG_BOOT_KERNEL_REMOVE="intel_iommu=on intel_iommu=igfx_off"
 
+export CONFIG_GPG_DEFAULT_ALGO=p256
+
 # TPM2 requirements
 export CONFIG_TPM2_TOOLS=y
 export CONFIG_PRIMARY_KEY_TYPE=ecc
