--- a/config/coreboot-qemu-tpm2.config
+++ b/config/coreboot-qemu-tpm2.config
@@ -34,7 +34,8 @@ CONFIG_HAVE_ASAN_IN_RAMSTAGE=y
 CONFIG_NO_STAGE_CACHE=y
 # CONFIG_CBMEM_STAGE_CACHE is not set
 # CONFIG_UPDATE_IMAGE is not set
-# CONFIG_BOOTSPLASH_IMAGE is not set
+CONFIG_BOOTSPLASH_IMAGE=y
+CONFIG_BOOTSPLASH_FILE="@BLOB_DIR@/bootsplash-1024x768.jpg"
 # CONFIG_FW_CONFIG is not set
 
 #
@@ -305,8 +306,10 @@ CONFIG_NO_EARLY_GFX_INIT=y
 #
 # Display
 #
-CONFIG_VGA_TEXT_FRAMEBUFFER=y
-# CONFIG_GENERIC_LINEAR_FRAMEBUFFER is not set
+# CONFIG_VGA_TEXT_FRAMEBUFFER is not set
+CONFIG_GENERIC_LINEAR_FRAMEBUFFER=y
+CONFIG_LINEAR_FRAMEBUFFER=y
+CONFIG_BOOTSPLASH=y
 # end of Display
 
 CONFIG_PCI=y
@@ -349,6 +352,8 @@ CONFIG_HAVE_USBDEBUG_OPTIONS=y
 # CONFIG_USBDEBUG is not set
 # CONFIG_VPD is not set
 CONFIG_DRIVERS_EMULATION_QEMU_BOCHS=y
+CONFIG_DRIVERS_EMULATION_QEMU_BOCHS_XRES=1024
+CONFIG_DRIVERS_EMULATION_QEMU_BOCHS_YRES=768
 # CONFIG_DRIVERS_GENERIC_CBFS_SERIAL is not set
 # CONFIG_DRIVERS_GENERIC_CBFS_UUID is not set
 # CONFIG_DRIVERS_GENESYSLOGIC_GL9750 is not set
