--- a/boards/qemu-coreboot-whiptail-tpm1/qemu-coreboot-whiptail-tpm1.config
+++ b/boards/qemu-coreboot-whiptail-tpm1/qemu-coreboot-whiptail-tpm1.config
@@ -138,8 +138,7 @@ run: $(TPMDIR)/.manufacture $(ROOT_DISK_IMG) $(MEMORY_SIZE_FILE) $(USB_FD_IMG)
 		--machine q35,accel=kvm:tcg \
 		-rtc base=utc \
 		-smp "$$(nproc)" \
-		-vga virtio \
-		-full-screen \
+		-vga std \
 		-m "$$(cat "$(MEMORY_SIZE_FILE)")" \
 		-serial stdio \
 		--bios "$(QEMU_BOOT_ROM)" \
