WiP: play with external/usb disk encryption (adds exfatprogs and e2fsprogs)
Adds:
- e2fsprogs to support ext4 filesystem creation through mke2fs
- add /etc/mke2fs.conf so that mke2fs knows how to handle ext2/ext3/ext4
- removes mke2fs support from busybox
- bump busybox to latest version which adds cpu acceletated hash functions (not needed per se here)
- Adds exfatprogs to have mkfs.exfat and fsck.exfat
- Adds prepare_thumb_drive /etc/luks-functions to be able to prepare a thumb drive with percentage of drive assigned to LUKS, rest to exfat
- Modify most board configs to test space requirements failing

TODO:
- REMOVE test.sh (unit test case here, not sure where we should add this in the future)
- More checking for availability of binaries on which PoC depends for exfat and ext4.
- Check cost of addition of e2fsprogs and exfatprogs for new dependency inclusion

GOAL here is to have secure thumb drive creation which Heads will be able to use to backup/restore/use generated GPG key material in the future.

--- a/boards/UNTESTED_qemu-linuxboot/UNTESTED_qemu-linuxboot.config
+++ b/boards/UNTESTED_qemu-linuxboot/UNTESTED_qemu-linuxboot.config
@@ -11,6 +11,8 @@ CONFIG_BUSYBOX=n
 else
 CONFIG_CRYPTSETUP=y
 CONFIG_LVM2=y
+CONFIG_E2FSPROGS=y
+CONFIG_EXFATPROGS=y
 CONFIG_MBEDTLS=y
 CONFIG_PCIUTILS=y
 CONFIG_POPT=y
