--- a/boards/librem_mini/librem_mini.config
+++ b/boards/librem_mini/librem_mini.config
@@ -15,6 +15,8 @@ CONFIG_IOPORT=y
 CONFIG_KEXEC=y
 CONFIG_UTIL_LINUX=y
 CONFIG_LVM2=y
+CONFIG_E2FSPROGS=y
+CONFIG_EXFATPROGS=y
 CONFIG_MBEDTLS=y
 CONFIG_PCIUTILS=y
 CONFIG_POPT=y
