--- a/boards/qemu-coreboot-whiptail-tpm1/qemu-coreboot-whiptail-tpm1.config
+++ b/boards/qemu-coreboot-whiptail-tpm1/qemu-coreboot-whiptail-tpm1.config
@@ -29,8 +29,12 @@ CONFIG_FLASHROM=y
 CONFIG_PCIUTILS=y
 CONFIG_UTIL_LINUX=y
 CONFIG_CRYPTSETUP2=y
+CONFIG_E2FSPROGS=y
+CONFIG_EXFATPROGS=y
 CONFIG_GPG2=y
 CONFIG_LVM2=y
+CONFIG_E2FSPROGS=y
+CONFIG_EXFATPROGS=y
 CONFIG_MBEDTLS=y
 CONFIG_DROPBEAR=y
 CONFIG_MSRTOOLS=y
