--- a/boards/x230-hotp-maximized_usb-kb/x230-hotp-maximized_usb-kb.config
+++ b/boards/x230-hotp-maximized_usb-kb/x230-hotp-maximized_usb-kb.config
@@ -27,6 +27,8 @@ CONFIG_GPG2=y
 CONFIG_KEXEC=y
 CONFIG_UTIL_LINUX=y
 CONFIG_LVM2=y
+CONFIG_E2FSPROGS=y
+CONFIG_EXFATPROGS=y
 CONFIG_MBEDTLS=y
 CONFIG_PCIUTILS=y
 
