WiP: Thumb drive useable for signing. Should cache Admin PIN and use it for disk unlock + import + signing next

--- a/boards/qemu-coreboot-whiptail-tpm1/qemu-coreboot-whiptail-tpm1.config
+++ b/boards/qemu-coreboot-whiptail-tpm1/qemu-coreboot-whiptail-tpm1.config
@@ -13,9 +13,14 @@ export CONFIG_LINUX_VERSION=5.10.5
 #Enable DEBUG output
 export CONFIG_DEBUG_OUTPUT=y
 export CONFIG_ENABLE_FUNCTION_TRACING_OUTPUT=y
+#TODO turn off by default. We cannot flash into Qemu ROM for the moment, so this currently needed to manually toggle
+export CONFIG_HAVE_GPG_KEY_BACKUP=y
+#export CONFIG_HAVE_GPG_KEY_BACKUP=n
+
 
 CONFIG_COREBOOT_CONFIG=config/coreboot-qemu-tpm1.config
 CONFIG_LINUX_CONFIG=config/linux-qemu.config
+
 
 ifeq "$(CONFIG_UROOT)" "y"
 CONFIG_BUSYBOX=n
